fix and complat to md and sm

--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabixo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto_api%2520agent_api%2520sad_api%2520market_api%2520fund_api%2520tse_api%2520base_api%2520market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26state%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8rbteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login_type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="btn btn-outline-success me-4 p-2" type="submit">فارابیکسو</a> 
-                <a href="https://account.irfarabi.com/web/login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fresponse_type%3Dcode%26client_id%3Dxon-prod%26scope%3Dopenid%2520profile%2520offline_access%26state%3DQ-Hww8g35N5oVvOP3T3YK9GAWvm4W6g_ihSF-D8h3b0%253D%26redirect_uri%3Dhttps%253A%252F%252Fmy.irfarabi.com%252Flogin%252Foauth2%252Fcode%252Ffarabi%26nonce%3Dt2uZT-m_9WSgo995RxfFBYlhi4z0hiWxfI2aYuRHh_0%26referer%3Dhttps%253A%252F%252Fmy.irfarabi.com%252F" 
+                <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
+                callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
+                xo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto
+                _api%2520agent_api%2520sad_api%2520market_api%2520fund_api%2520tse_api%2520base_api%2520
+                market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
+                ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
+                bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
+                _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="btn btn-outline-success me-4 p-2" type="submit">فارابیکسو</a> 
+                <a href="https://account.irfarabi.com/web/login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallb
+                ack%3Fresponse_type%3Dcode%26client_id%3Dxon-prod%26scope%3Dopenid%2520profile%2520offline_access%26state%3DQ-Hww8g35N5oVvOP3T3YK9GAWvm4W6g_ihSF-D8h3b0%253D%26redirect_uri%3Dhttps%253A%252F%252Fmy.irfarabi.com%252Flogin%252Foauth2%252Fcode%252Ffarabi%26nonce%3Dt2uZT-m_9WSgo995RxfFBYlhi4z0hiWxfI2aYuRHh_0%26referer%3Dhttps%253A%252F%252Fmy.irfarabi.com%252F" 
                 class="btn btn-success me-4 p-2" type="submit">ورود به فارابی زون</a>
                 
               </form>
@@ -472,8 +480,8 @@
   <section class="container p-4">
 <div class="row">
 
-  <div class="col-md-3" >
-<a  class="pb-4 d-block" href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
+  <div class="col-md-3 mb-sm-5" >
+<a  class="pb-4 d-block " href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
 </a>
   <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
   <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a>
@@ -481,7 +489,7 @@
   
 
   </div>
-  <div class="col-md-3" >
+  <div class="col-md-3 mb-sm-5" >
     <p class="pb-3 fs-5" style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a>
@@ -489,7 +497,7 @@
 
     
   </div>
-  <div class="col-md-3" >
+  <div class="col-md-3 mb-sm-5" >
     <p class="pb-3 fs-5" style="color: #ffffffb3">  خدمات فارابی </p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a>
@@ -497,7 +505,7 @@
 
 
   </div>
-  <div class="col-md-3" >
+  <div class="col-md-3 mb-sm-5 " >
     <p class="pb-3 fs-5" style="color: #ffffffb3">  ارتباط با فارابی</p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a>
@@ -535,14 +543,21 @@
 
 
 <section >
-  <div class="mb-5"">
-    <a href="#" class="poshtbany bg-success  p-4 rounded-circle "><img src="./imags/icone-poshtebany.svg" alt=""></a>
+  <div class="" >
+    <a href="#" class="poshtbany bg-success  p-4 rounded-circle " style="display: inline-block;"><img src="./imags/icone-poshtebany.svg" alt=""></a>
   </div>
   </section>
 
-  <section class="bg-light h-75">
-    <div class=" text-center mb-2 " style="height: 100px;" >
-      <a href="#" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-4 text-white text-center" style="text-decoration: none; display: inline-block;">خرید و شروع سرمایه گذاری</a>
+  <section class="bg-light h-75 d-md-none" style="">
+    <div class=" text-center" style="height: 100px;" >
+      <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
+      callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
+      xo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto
+      _api%2520agent_api%2520sad_api%2520market_api%2520fund_api%2520tse_api%2520base_api%2520
+      market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
+      ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
+      bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
+      _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-4 text-white text-center" style="text-decoration: none; display: inline-block;">خرید و شروع سرمایه گذاری</a>
     </div>
     </section>
    
