fix and coplat buttom sarmaye gozary

--- a/index.html
+++ b/index.html
@@ -542,14 +542,20 @@
 </div>
 
 
-<section >
-  <div class="" >
-    <a href="#" class="poshtbany bg-success  p-4 rounded-circle " style="display: inline-block;"><img src="./imags/icone-poshtebany.svg" alt=""></a>
+<!-- <section >
+  <div class="fixed-bottom" >
+    <a href="#" class="poshtbany bg-success  p-4 rounded-circle top:50px;" style="display: inline-block;"><img src="./imags/icone-poshtebany.svg" alt=""></a>
   </div>
-  </section>
+  </section> -->
 
-  <section class="bg-light h-75 d-md-none" style="">
-    <div class=" text-center" style="height: 100px;" >
+  <div class="fixed-bottom" style="bottom: 20px; right: 92vw;" >
+    <a href="#" class="poshtbany bg-success  p-4 rounded-circle top:50px;" style="display: inline-block;"><img src="./imags/icone-poshtebany.svg" alt=""></a>
+  </div>
+
+
+
+  <section class="bg-light d-md-none fixed-bottom" style="height: 100px;">
+    <div class=" text-center" style="height: 50px;" >
       <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
       callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
       xo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto
