delete icone dropdowon

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
+                    class="nav-link dropdown"
                     href="#"
                     role="button"
                     data-bs-toggle="dropdown"
