last commit man after dlelt icon navbar

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
 
 
-  <section class="bg-light d-md-none fixed-bottom" style="height: 100px;">
+  <section class="bg-light d-md-none fixed-bottom" style="height: 100px; background-color: white;">
     <div class=" text-center" style="height: 50px;" >
       <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
       callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
