--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     <section class="container pt-5">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="text-success mb-5">فلز پرتفوی آهنین بورس!</h1>
+          <h1 class="text-center text-md-start text-success mb-5 fw-bold">فلز، پرتفوی آهنین بورس!</h1>
           <p class="mb-5">
             با خرید صندوق فلز فارابی (ETF) بهترین نمادهای صنعت فلزات را به
             پرتفوی خود اضافه کنید.
           </p>
           <button class="btn btn-success mb-3 ps-4 pe-4"> شروع سرمایه گذاری <span class="ps-4"><i class="bi bi-arrow-left"></i></span></button>
           <button class="btn btn-outline-success mb-3">مشاوره انلاین</button>
-          <p class="fw-light" style="font-size: small">
+          <p class="fw-light text-center text-md-start" style="font-size: small">
             <span><i class="bi bi-exclamation-circle"></i></span>
             با جستجوی نماد «فلزفارابی» در کارگزاری خود نیز، می‌توانید از 100
             هزار تومان تا بی‌نهایت سرمایه‌گذاری کنید.
@@ -480,7 +480,7 @@
   <section class="container p-4">
 <div class="row">
 
-  <div class="col-md-3 mb-sm-5" >
+  <div class="col-md-3 mb-5 mb-md-0" style="display: inline-block;" >
 <a  class="pb-4 d-block " href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
 </a>
   <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
@@ -489,7 +489,7 @@
   
 
   </div>
-  <div class="col-md-3 mb-sm-5" >
+  <div class="col-md-3  mb-5 mb-md-0" style="display: inline-block;">
     <p class="pb-3 fs-5" style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a>
@@ -497,7 +497,7 @@
 
     
   </div>
-  <div class="col-md-3 mb-sm-5" >
+  <div class="col-md-3  mb-5 mb-md-0"style="display: inline-block;" >
     <p class="pb-3 fs-5" style="color: #ffffffb3">  خدمات فارابی </p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a>
@@ -505,7 +505,7 @@
 
 
   </div>
-  <div class="col-md-3 mb-sm-5 " >
+  <div class="col-md-3  mb-5 mb-md-0 " style="display: inline-block;">
     <p class="pb-3 fs-5" style="color: #ffffffb3">  ارتباط با فارابی</p>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a>
     <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a>
