fix heder backgrand

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./styel.css" />
   </head>
   <body>
-    <header class="mb-5 position-sticky top-0 shadow-sm hed-nav">
+    <header class="mb-5 position-sticky top-0 shadow-sm hed-nav bg-white">
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white ">
           <div class="container-fluid">
