fix sm two bottom in page befor imag after heder

--- a/index.html
+++ b/index.html
@@ -122,8 +122,15 @@
             با خرید صندوق فلز فارابی (ETF) بهترین نمادهای صنعت فلزات را به
             پرتفوی خود اضافه کنید.
           </p>
-          <button class="btn btn-success mb-3 ps-4 pe-4"> شروع سرمایه گذاری <span class="ps-4"><i class="bi bi-arrow-left"></i></span></button>
-          <button class="btn btn-outline-success mb-3">مشاوره انلاین</button>
+          <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
+          callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
+          xo.irfarabi.com%252Fauth%252Fcallback%26response_type%3Dcode%26scope%3Dime_api%2520proto
+          _api%2520agent_api%2520sad_api%2520market_api%2520fund_api%2520tse_api%2520base_api%2520
+          market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
+          ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
+          bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
+          _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-inline-block btn btn-success mb-3 ps-4 pe-4"> شروع سرمایه گذاری <span class="ps-4"><i class="bi bi-arrow-left"></i></span></a>
+          <a href="https://irfarabi.com/consult" class="d-none d-md-inline-block btn btn-outline-success mb-3">مشاوره انلاین</a>
           <p class="fw-light text-center text-md-start" style="font-size: small">
             <span><i class="bi bi-exclamation-circle"></i></span>
             با جستجوی نماد «فلزفارابی» در کارگزاری خود نیز، می‌توانید از 100
