--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg bg-white ">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="https://my.irfarabi.com/Loading?redirect=/"
               ><img src="./imags/لوگو فارابی.jpeg" style="width: 150px" alt=""
             /></a>
             <button
@@ -145,7 +145,13 @@
           market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
           ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
           bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
-          _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-inline-block btn btn-success mb-3 ps-4 pe-4"> شروع سرمایه گذاری <span class="ps-4"><i class="bi bi-arrow-left"></i></span></a>
+          _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-inline-block btn btn-success mb-3 ps-4 pe-4 w-75" 
+          >
+           شروع سرمایه گذاری 
+           <span class="ps-4">
+            <i class="bi bi-arrow-left"></i>
+          </span>
+          </a>
           <a href="https://irfarabi.com/consult" class="d-none d-md-inline-block btn btn-outline-success mb-3">مشاوره انلاین</a>
           <p class="fw-light text-center text-md-start" style="font-size: small">
             <span><i class="bi bi-exclamation-circle"></i></span>
@@ -504,7 +510,7 @@
 <div class="row">
 
   <div class="col-md-3 mb-5 mb-md-0" style="display: inline-block;" >
-<a  class="pb-4 d-block " href="#"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
+<a  class="pb-4 d-block " href="https://my.irfarabi.com/Loading?redirect=/"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
 </a>
   <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
   <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a>
