--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section class="container pt-5">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="text-center text-md-start text-success mb-5 fw-bold">فلز، پرتفوی آهنین بورس!</h1>
+          <h1 class="text-center text-md-start mb-5 fw-bold" style="color: #066137;">فلز، پرتفوی آهنین بورس!</h1>
           <p class="mb-5">
             با خرید صندوق فلز فارابی (ETF) بهترین نمادهای صنعت فلزات را به
             پرتفوی خود اضافه کنید.
