add pading in icon four in the 4 item in project

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     
     <div class="row">
       <div class="col">
-          <h2 class="text-success">چرا در
+          <h2 class="" style="color: #066137;">چرا در
              <span><i class="bi bi-chevron-double-right"></i></span>فلز فارابی<span><i class="bi bi-chevron-double-left"></i></span>
              سرمایه گذاری کنیم ؟</h2>
       </div>
@@ -230,7 +230,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
       <div class="col">
         <div class="card h-100 bg-light">
-          <i class="bi bi-telegram icon-sa"></i>
+          <i class="bi bi-telegram icon-sa pt-3"></i>
           <div class="card-body">
             <h5 class="card-title">کسب بازدهی بیشتر شاخص صنعت </h5>
             <p class="card-text">بازدهی صنعت فلزات همواره بهتر از میانگین رشد شاخص کل بورس بوده است.</p>
@@ -240,7 +240,7 @@
       </div>
       <div class="col">
         <div class="card h-100 bg-light">
-          <i class="bi bi-instagram icon-sa"></i>
+          <i class="bi bi-instagram icon-sa pt-3"></i>
           <div class="card-body">
             <h5 class="card-title">سرمایه‌گذاری در بهترین نمادها  </h5>
             <p class="card-text">بدون نیاز به دانش سرمایه‌گذاری و تحلیل و بررسی از بین ده‌ها نماد، سرمایه‌گذاری کنید..</p>
@@ -255,7 +255,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
       <div class="col">
         <div class="card h-100 bg-light">
-          <i class="bi bi-linkedin icon-sa"></i>
+          <i class="bi bi-linkedin icon-sa pt-3"></i>
           <div class="card-body">
             <h5 class="card-title">کارمزد معاملاتی کم (مالیات صفر) </h5>
             <p class="card-text">با خرید این نماد 
@@ -267,7 +267,7 @@
       </div>
       <div class="col">
         <div class="card h-100 bg-light">
-          <i class="bi bi-twitter icon-sa"></i>
+          <i class="bi bi-twitter icon-sa pt-3"></i>
           <div class="card-body">
             <h5 class="card-title">کاهش ریسک سرمایه‌گذاری </h5>
             <p class="card-text">با خرید این نماد از هزینه‌های خرید و
