add link footer to project

--- a/index.html
+++ b/index.html
@@ -512,33 +512,33 @@
   <div class="col-md-3 mb-5 mb-md-0" style="display: inline-block;" >
 <a  class="pb-4 d-block " href="https://my.irfarabi.com/Loading?redirect=/"><img src="./imags/icone-footerrr.svg"  style="width: 170px; height: 50px;"  alt="">
 </a>
-  <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
-  <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a>
-  <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> شماره حساب های شرکت </a>
+  <a href="https://irfarabi.com/about" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> معرفی فارابی </a>
+  <a href="https://irfarabi.com/faq" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">  سوالات متداول </a>
+  <a href="https://irfarabi.com/banks" class="d-block" style="text-decoration: none; color: #ffffffb3"> شماره حساب های شرکت </a>
   
 
   </div>
   <div class="col-md-3  mb-5 mb-md-0" style="display: inline-block;">
     <p class="pb-3 fs-5" style="color: #ffffffb3">راهکارهای سرمایه گذاری</p>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a>
-    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> کارت بانکی  نکسو</a>
+    <a href="https://irfarabi.com/equity-fund" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> صندوق سهامی</a>
+    <a href="https://irfarabi.com/fixed-incom-fund" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">صندوق درآمد ثابت  </a>
+    <a href="https://irfarabi.com/nexo" class="d-block" style="text-decoration: none; color: #ffffffb3"> کارت بانکی  نکسو</a>
 
     
   </div>
   <div class="col-md-3  mb-5 mb-md-0"style="display: inline-block;" >
     <p class="pb-3 fs-5" style="color: #ffffffb3">  خدمات فارابی </p>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a>
-    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> سامانه مشتریان (گردش حساب)</a>
+    <a href="https://account.irfarabi.com/reg/?j=1&is=1" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3">کد بورسی و سجام</a>
+    <a href="https://irfarabi.com/branches" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> شعب و دفاتر پیشخوان</a>
+    <a href="https://farabi.irbrokersite.ir/" class="d-block" style="text-decoration: none; color: #ffffffb3"> سامانه مشتریان (گردش حساب)</a>
 
 
   </div>
   <div class="col-md-3  mb-5 mb-md-0 " style="display: inline-block;">
     <p class="pb-3 fs-5" style="color: #ffffffb3">  ارتباط با فارابی</p>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a>
-    <a href="#" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a>
-    <a href="#" class="d-block" style="text-decoration: none; color: #ffffffb3"> ثبت شکایات </a>
+    <a href="https://jobs.irfarabi.com/" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> همکاری با فارابی</a>
+    <a href="https://irfarabi.com/contact-us" class="pb-3 d-block" style="text-decoration: none; color: #ffffffb3"> تماس با ما</a>
+    <a href="https://help.irfarabi.com/" class="d-block" style="text-decoration: none; color: #ffffffb3"> ثبت شکایات </a>
 
   </div>
 
