--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <section class="container pt-5">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="text-center text-md-start mb-5 fw-bold" style="color: #066137; font-family: font-four;">فلز، پرتفوی آهنین بورس!</h1>
-          <p class="mb-5">
+          <h1 class="text-center text-md-start mb-5 " style="color: #066137; font-family: font-four;">فلز، پرتفوی آهنین بورس!</h1>
+          <p class="mb-5" style=" font-family: font-five;">
             با خرید صندوق فلز فارابی (ETF) بهترین نمادهای صنعت فلزات را به
             پرتفوی خود اضافه کنید.
           </p>
