add nav item droupdown in navbar

--- a/index.html
+++ b/index.html
@@ -51,14 +51,45 @@
                   >
                     سرمایه گذاری
                   </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
+                  <ul class="dropdown-menu border-0 rounded-0">
+                    <li><hr class="dropdown-divider " style="background-color: #066137; padding: 0.5px;" /></li>
+
+                    <li><a class="dropdown-item d-none d-lg-block border-bottom border-lightgray mb-2" href="#">راهکار های سرمایه گذاری</a></li>
+
+
                     <li>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">خرید سهام</a>
                     </li>
-                    <li><hr class="dropdown-divider" /></li>
                     <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <a class="dropdown-item" href="#"> صندوق سهامی</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">صندوق درآمد ثابت</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        صندوق سهامی سلام (ETF)
+                    </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        صندوق درآمدثابت لبخند (ETF)
+                    </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        صندوق سینرژی (ETF)
+                    </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        صندوق فلز (EFT)
+                    </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        سهام عدالت
+                    </a>
                     </li>
                   </ul>
                 </li>
@@ -73,9 +104,11 @@
                   >
                   فارابی
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu  border-0 rounded-0">
+                    <li><hr class="dropdown-divider " style="background-color: #066137; padding: 0.5px;" /></li>
+
                     <li><a class="dropdown-item" href="#">Action</a></li>
-                    
+
                     <li><hr class="dropdown-divider" /></li>
 
                     <li>
