fix styel bottm sell donwn to sm

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
 
 
-  <section class="bg-light d-inlin-block d-md-none fixed-bottom" style="height: 100px; background-color: white;">
+  <section class="bg-light d-inlin-block d-md-none fixed-bottom " style="height: 100px; background-color: white;">
     <div class=" text-center" style="height: 50px;" >
       <a href="https://account.irfarabi.com/web/login-password?ReturnUrl=%2Fconnect%2Fauthorize%2F
       callback%3Fclient_id%3Dfarabixo-mobile-new%26redirect_uri%3Dhttps%253A%252F%252Fm.farabi
@@ -644,7 +644,7 @@
       market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
       ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
       bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
-      _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="bg-success rounded-1 pe-5 ps-5 pt-3 pb-3 mt-4 text-white text-center" style="text-decoration: none; display: inline-block;">خرید و شروع سرمایه گذاری</a>
+      _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="bg-success rounded-1 pe-5 ps-5 pt-2 pb-2  text-white text-center w-75" style="text-decoration: none; display: inline-block; margin-top: 30px;">خرید و شروع سرمایه گذاری</a>
     </div>
     </section>
    
