fix text center and start

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 <div class="container p-3 ">
   <div class="row align-items-center">
     <div class="col-md-5">
-<p>
+<p class="text-center text-md-start">
   © تمامی حقوق برای کارگزاری فارابی محفوظ است
   </p>
     </div>
