fix part icon sm and lg farabi

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <nav class="navbar navbar-expand-lg bg-white ">
           <div class="container-fluid">
             <a class="navbar-brand" href="https://my.irfarabi.com/Loading?redirect=/"
-              ><img src="./imags/لوگو فارابی.jpeg" style="width: 150px" alt=""
+              ><img class="d-none d-lg-block" src="./imags/لوگو فارابی.jpeg" style="width: 150px;" alt=""
+            /></a>
+            <a class="navbar-brand" href="https://my.irfarabi.com/Loading?redirect=/"
+              ><img class="d-inlin-block d-lg-none pb-2" src="./imags/لوگوی-کارگزاری-فارابی.png" style="width: 90px;  position: fixed; top:0px; right: 10px;" alt=""
             /></a>
             <button
               class="navbar-toggler"
