fix items in project 1

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
           ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
           bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
-          _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-inline-block btn btn-success mb-3 ps-4 pe-4 w-50" 
+          _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-inline-block btn btn-success mb-3  w-50" 
           >
               <span class="p-lg-2">
                 شروع سرمایه گذاری 
