fix items in project 2

--- a/index.html
+++ b/index.html
@@ -65,36 +65,36 @@
 
 
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/signup-bourse">خرید سهام</a>
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/signup-bourse">خرید سهام</a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/equity-fund"> صندوق سهامی</a>
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/equity-fund"> صندوق سهامی</a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/fixed-incom-fund">صندوق درآمد ثابت</a>
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/fixed-incom-fund">صندوق درآمد ثابت</a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/equity-fund/salam">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/equity-fund/salam">
                         صندوق سهامی سلام (ETF)
                     </a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/fixed-income/labkhand">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/fixed-income/labkhand">
                         صندوق درآمدثابت لبخند (ETF)
                     </a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/synergy">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/synergy">
                         صندوق سینرژی (ETF)
                     </a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/felezfund">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/felezfund">
                         صندوق فلز (EFT)
                     </a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://edalat.farabixo.com/">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://edalat.farabixo.com/">
                         سهام عدالت
                     </a>
                     </li>
@@ -131,18 +131,18 @@
                       <a class="dropdown-item d-none d-lg-block border-bottom border-lightgray mb-2 px-1 py-2" href="#"> درباره ما</a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/about">  معرفی فارابی</a>
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/about">  معرفی فارابی</a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/partners">شرکت های همکار</a>
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/partners">شرکت های همکار</a>
                     </li>
                     <li class="mx-4" >
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/banks">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/banks">
                       شماره حساب های شرکت
                     </a>
                     </li>
                     <li class="mx-4">
-                      <a class="dropdown-item px-1 py-2" href="https://irfarabi.com/faq">
+                      <a class="dropdown-item px-1 py-2 text-center text-md-start" href="https://irfarabi.com/faq">
                         سوالات متداول     
                     </a>
                     </li>
@@ -170,7 +170,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://jobs.irfarabi.com/">
+                  <a class="nav-link active " aria-current="page" href="https://jobs.irfarabi.com/">
                     فرصت های شغلی     
                   </a>
                 </li>
@@ -183,7 +183,7 @@
                 market_api%2520profile%2520srvdsk_api%2520tse_profile%2520openid%2520offline_access%26st
                 ate%3Dd7e4b4101a94477e84c43ab877c30062%26code_challenge%3DYXmGsujj4daAMJNQC8C0Rrwwtv6W8r
                 bteHK7fhBoZFc%26code_challenge_method%3DS256%26response_mode%3Dquery%26login
-                _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-block btn btn-outline-success me-2  pe-2 ps-2" type="submit">فارابیکسو</a> 
+                _type%3Dpassword%26idp%3Dfarabixo&login_type=password&idp=farabixo" class="d-none d-md-block btn btn-outline-success me-2  pe-2 ps-2 " type="submit">فارابیکسو</a> 
                 <a style="font-size: 14px; border-radius: 4px;" href="https://account.irfarabi.com/web/login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallb
                 ack%3Fresponse_type%3Dcode%26client_id%3Dxon-prod%26scope%3Dopenid%2520profile%2520offline_access%26state%3DQ-Hww8g35N5oVvOP3T3YK9GAWvm4W6g_ihSF-D8h3b0%253D%26redirect_uri%3Dhttps%253A%252F%252Fmy.irfarabi.com%252Flogin%252Foauth2%252Fcode%252Ffarabi%26nonce%3Dt2uZT-m_9WSgo995RxfFBYlhi4z0hiWxfI2aYuRHh_0%26referer%3Dhttps%253A%252F%252Fmy.irfarabi.com%252F" 
                 class=" d-none d-md-block btn btn-success me-4  pe-2 ps-2" type="submit">ورود به فارابی زون</a>
