add hover in icon-footer all

--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@
     </div>
     <div class="col-md-3 ms-auto text-center">
       <div>
-        <a class="" href="t.me/farabivest" style="color: #ffffffb3; "><i class="bi bi-telegram me-4 fs-5 p-3 foot-icon"></i></a>
-        <a href="#" style="color: #ffffffb3;"><i class="bi bi-instagram me-4 fs-5"></i></a>
-        <a href="https://www.linkedin.com/in/your-linkedin-Mehran (angoraj) Taghavi/" style="color: #ffffffb3;"><i class="bi bi-linkedin me-4 fs-5"></i></a>
-        <a href="#" style="color: #ffffffb3;"><i class="bi bi-twitter fs-5"></i></i></a>
+        <a href="t.me/farabivest" style="color: #ffffffb3; "><i class="bi bi-telegram me-4 fs-5 p-3 foot-icon"></i></a>
+        <a href="#" style="color: #ffffffb3;"><i class="bi bi-instagram me-4 fs-5 p-3 foot-icon"></i></a>
+        <a href="https://www.linkedin.com/in/your-linkedin-Mehran (angoraj) Taghavi/" style="color: #ffffffb3;"><i class="bi bi-linkedin me-4 fs-5 p-3 foot-icon"></i></a>
+        <a href="#" style="color: #ffffffb3;"><i class="bi bi-twitter fs-5 p-3 foot-icon"></i></a>
         
       </div>
 
