fix hover btn-moshaverh

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <i class="bi bi-arrow-left"></i>
           </span>
           </a>
-          <a style="border-radius: 4px;" href="https://irfarabi.com/consult" class="d-none d-md-inline-block btn btn-outline-success ms-1 mb-3 pe-4 ps-3 ">مشاوره انلاین</a>
+          <a style="border-radius: 4px; " href="https://irfarabi.com/consult" class="d-none d-md-inline-block btn btn-outline-success ms-1 mb-3 pe-4 ps-3 btn-moshaver">مشاوره انلاین</a>
           <p class="fw-light text-center text-md-start mb-5 mb-md-0" style="font-size: 12px">
             <span><i class="bi bi-exclamation-circle"  style="color:#c2c2c2 ;"></i></span>
             با جستجوی نماد «فلزفارابی» در کارگزاری خود نیز، می‌توانید از 100
