fix hover farabi just

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 
                 <li class="nav-item dropdown ">
                   <a
-                    class="nav-link dropdown "
+                    class="nav-link dropdown navbar-text"
                     href="#"
                     role="button"
                     data-bs-toggle="dropdown"
