--- a/index.html
+++ b/index.html
@@ -253,48 +253,6 @@
    </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
    <section class="container mb-4 text-center">
 
     <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
@@ -635,7 +593,6 @@
         <a href="#" style="color: #ffffffb3;"><i class="bi bi-twitter fs-5 p-3 foot-icon"></i></a>
         
       </div>
-
     </div>
   </div>
 </section>
@@ -675,26 +632,19 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    >
-  
+      crossorigin="anonymous">
   </script>
     <script src="./sandbox.js">
+    // document.addEventListener('DOMContentLoaded', function () {
+    //   const accordionButtons = document.querySelectorAll('.accordion-button');
 
-
-
-<!-- JavaScript سفارشی -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const accordionButtons = document.querySelectorAll('.accordion-button');
-
-      accordionButtons.forEach(button => {
-        button.addEventListener('click', function () {
-          const accordionItem = this.closest('.accordion-item');
-          accordionItem.classList.toggle('active'); // اضافه یا حذف کلاس active
-        });
-      });
-    });
+    //   accordionButtons.forEach(button => {
+    //     button.addEventListener('click', function () {
+    //       const accordionItem = this.closest('.accordion-item');
+    //       accordionItem.classList.toggle('active'); // اضافه یا حذف کلاس active
+    //     });
+    //   });
+    // });
     </script>
   </body>
 </html>
